--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^7.13.0",
     "recharts": "^2.15.4",
+    "resend": "^6.9.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
